--- a/templates/base.html
+++ b/templates/base.html
@@ -8,44 +8,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pàgina principal</title>
-    <link rel="stylesheet"  href="{%  static  'css/index.css'  %}">
+    {% block link_css %}
+
+    {% endblock %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-
-    <!-- Barra de navegació -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top navbar-rounded shadow-sm"
-        style="z-index: 100;">
-
-        <a class="navbar-brand left" href="index.html"><img src="images/icon.png" width="45px"></a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="cartellera">Cartellera</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Per Picar</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="login">Iniciar sessió</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="registrar">Crear un compte</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <!-- incloem la barra de navegació -->
+    {% include 'navbar.html' %}
 
     <!-- el que posem aquí es reemplaçarà -->
     {% block content %}
