--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -1,52 +1,12 @@
-{% load static %}
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
+<!--
 
-<head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet"  href="{%  static  'css/login.css'  %}">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</head>
+<link rel="stylesheet"  href="">
 
-<body>
+ -->
 
-    <!-- Barra de navegació -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top navbar-rounded shadow-sm"
-        style="z-index: 100;">
-
-        <a class="navbar-brand left" href="index.html"><img src="images/icon.png" width="45px"></a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="cartellera">Cartellera</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Per Picar</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="login">Iniciar sessió</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="registrar">Crear un compte</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+{% block content %}
     <div class="global-container">
         <div class="card login-form">
             <div class="card-body">
@@ -79,15 +39,4 @@
             </div>
         </div>
     </div>
-    <footer>
-        <div class="footer-text">
-            <p class="sitemap"><b>Sitemap</b></p>
-            <li><a href="index.html">Principal</a></li>
-            <li><a href="cartellera.html">Cartellera</a></li>
-            <li><a href="login.html">Iniciar sessió</a></li>
-            <li><a href="registrar.html">Crear compte</a></li>
-        </div>
-    </footer>
-</body>
-
-</html>
+{% endblock %}
