Afegides imatges, estils i urls funcionals.

--- a/templates/cartellera.html
+++ b/templates/cartellera.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
 
-<!--
-
-<link rel="stylesheet"  href="">
-
- -->
+{% block link_css %}
+    <link rel="stylesheet" href="{%  static  'css/index.css'  %}">
+{% endblock %}
 
 {% block content %}
 
@@ -15,7 +14,7 @@
             <div class="col-md-3 col-sm-6 mb-3">
                 <a href="#" class="custom-card">
                     <div class="card">
-                        <img src="cartellera_img/los_elfkins.jpg" class="card-img-top">
+                        <img src="{%  static  'img/poster_img/los_elfkins.jpg'  %}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Los Elfkins</h5>
                         </div>
@@ -25,36 +24,16 @@
             <div class="col-md-3 col-sm-6 mb-3">
                 <a href="pelicules/trolls2.html" class="custom-card">
                     <div class="card">
-                        <img src="cartellera_img/trolls2.jpg" class="card-img-top">
+                        <img src="{%  static  'img/poster_img/trolls2.jpg'  %}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Trolls 2 - Gira mundial</h5>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-6 mb-3">
-                <a href="#" class="custom-card">
-                    <div class="card">
-                        <img src="cartellera_img/croods2.jpg" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Los Croods: Una nueva era</h5>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-6 mb-3">
-                <a href="#" class="custom-card">
-                    <div class="card">
-                        <img src="cartellera_img/jinete_dragon.jpg" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">El Jinete del Dragón</h5>
-                        </div>
-                    </div>
-                </a>
-            </div>
             <br>
             <div class="col-md-3 col-sm-6 mb-3">
-                <a href="pelicules/wonder_woman_84.html" class="custom-card">
+                <a href="{%  static  'img/poster_img/ww84.jpg'  %}" class="custom-card">
                     <div class="card">
                         <img src="cartellera_img/ww84.jpg" class="card-img-top">
                         <div class="card-body">
@@ -66,7 +45,7 @@
             <div class="col-md-3 col-sm-6 mb-3">
                 <a href="#" class="custom-card">
                     <div class="card">
-                        <img src="cartellera_img/jungla_cristal1.jpg" class="card-img-top">
+                        <img src="{%  static  'img/poster_img/jungla_cristal1.jpg'  %}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">La Jungla de Cristal</h5>
                         </div>
@@ -76,7 +55,7 @@
             <div class="col-md-3 col-sm-6 mb-3">
                 <a href="#" class="custom-card">
                     <div class="card">
-                        <img src="cartellera_img/jungla_cristal2.jpg" class="card-img-top">
+                        <img src="{%  static  'img/poster_img/jungla_cristal2.jpg'  %}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">La Jungla de Cristal 2: Alerta Roja</h5>
                         </div>
@@ -86,7 +65,7 @@
             <div class="col-md-3 col-sm-6 mb-3">
                 <a href="#" class="custom-card">
                     <div class="card">
-                        <img src="cartellera_img/jungla_cristal3.jpg" class="card-img-top">
+                        <img src="{%  static  'img/poster_img/jungla_cristal3.jpg'  %}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">La Jungla de Cristal 3: La venganza</h5>
                         </div>
@@ -97,7 +76,7 @@
             <div class="col-md-3 col-sm-6 mb-3">
                 <a href="#" class="custom-card">
                     <div class="card">
-                        <img src="cartellera_img/padre_nmq1_2.jpg" class="card-img-top">
+                        <img src="{%  static  'img/poster_img/padre_nmq1_2.jpg'  %}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Padre no hay más que uno 2</h5>
                         </div>
@@ -105,19 +84,9 @@
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-3">
-                <a href="#" class="custom-card">
-                    <div class="card">
-                        <img src="cartellera_img/aves_d_presa.jpg" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Aves de Presa</h5>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-6 mb-3">
                 <a href="pelicules/regreso_al_futuro.html" class="custom-card">
                     <div class="card">
-                        <img src="cartellera_img/regreso_al_futuro.jpg" class="card-img-top">
+                        <img src="{%  static  'img/poster_img/regreso_al_futuro.jpg'  %}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Regreso al Futuro</h5>
                         </div>
@@ -127,7 +96,7 @@
             <div class="col-md-3 col-sm-6 mb-3">
                 <a href="#" class="custom-card">
                     <div class="card">
-                        <img src="cartellera_img/regreso_al_futuro2.jpg" class="card-img-top">
+                        <img src="{%  static  'img/poster_img/regreso_al_futuro2.jpg'  %}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Regreso al Futuro 2</h5>
                         </div>
@@ -137,7 +106,7 @@
             <div class="col-md-3 col-sm-6 mb-3">
                 <a href="#" class="custom-card">
                     <div class="card">
-                        <img src="cartellera_img/regreso_al_futuro3.jpg" class="card-img-top">
+                        <img src="{%  static  'img/poster_img/regreso_al_futuro3.jpg'  %}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Regreso al Futuro 3</h5>
                         </div>
@@ -147,7 +116,7 @@
             <div class="col-md-3 col-sm-6 mb-3">
                 <a href="pelicules/guerra_con_mi_abuelo.html" class="custom-card">
                     <div class="card">
-                        <img src="cartellera_img/guerra_vs_mi_abuelo.jpg" class="card-img-top">
+                        <img src="{%  static  'img/poster_img/guerra_vs_mi_abuelo.jpg'  %}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">En guerra con mi abuelo</h5>
                         </div>
