--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <div class="global-container">
         <div class="card login-form">
             <div class="card-body">
-                <h3 class="card-title text-center">Crea un compte</h3>
+                <h3 class="card-title text-center">Inicia sessió</h3>
                 <div class="card-text">
                     <!--
                 <div class="alert alert-danger alert-dismissible fade show" role="alert">Incorrect username or password.</div> -->
@@ -21,17 +21,14 @@
                                 aria-describedby="emailHelp">
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputPassword1">Contrasenya</label>
+                            <label for="exampleInputPassword1">Cantrasenya</label>
+                            <a href="#" style="float:right;font-size:12px;">Has oblidat la contrasenya?</a>
                             <input type="password" class="form-control form-control-sm" id="exampleInputPassword1">
                         </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword2">Confirma la contrasenya</label>
-                            <input type="password" class="form-control form-control-sm" id="exampleInputPassword1">
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-block">Registrar</button>
+                        <button type="submit" class="btn btn-primary btn-block">Inicia sessió</button>
 
-                        <div class="sign-in">
-                            Ja tens compte? <a href="login.html">Inicia sessió</a>
+                        <div class="sign-up">
+                            No tens compte? <a href="registrar.html">Crea'n un</a>
                         </div>
                     </form>
                 </div>
