--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
 
-<!--
-
-<link rel="stylesheet"  href="">
-
- -->
+{% block link_css %}
+    <link rel="stylesheet" href="{%  static  'css/index.css'  %}">
+{% endblock %}
 
 {% block content %}
 
@@ -17,13 +16,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="banners/croods2.jpg" alt="First slide">
+                <img class="d-block w-100" src="{%  static  'img/banners/croods2.jpg'  %}" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="banners/ww84_banner.jpg" alt="Second slide">
+                <img class="d-block w-100" src="{%  static  'img/banners/ww84_banner.jpg'  %}" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="banners/aves_de_presa_banner.jpg" alt="Third slide">
+                <img class="d-block w-100" src="{%  static  'img/banners/aves_de_presa_banner.jpg'  %}" alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -40,7 +39,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
-                    <img src="images/popcorn.png">
+                    <img src="{%  static  'img/images/popcorn.png'  %}">
                     <div class="card-body">
                         <h5 class="card-title">Les millors!</h5>
                         <p>Ens enorgulleix comptar amb les segones MILLORS CRISPETES de Catalunya!</p>
