Arreglar link de login/registre

--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
                         <button type="submit" class="btn btn-primary btn-block">Inicia sessió</button>
 
                         <div class="sign-up">
-                            No tens compte? <a href="registrar.html">Crea'n un</a>
+                            No tens compte? <a href="/registrar">Crea'n un</a>
                         </div>
                     </form>
                 </div>
