--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -31,7 +31,7 @@
                         <button type="submit" class="btn btn-primary btn-block">Registrar</button>
 
                         <div class="sign-in">
-                            Ja tens compte? <a href="login.html">Inicia sessió</a>
+                            Ja tens compte? <a href="/login">Inicia sessió</a>
                         </div>
                     </form>
                 </div>
