--- a/Apps/gestio_cine/static/css/login.css
+++ b/Apps/gestio_cine/static/css/login.css
@@ -23,17 +23,19 @@ nav .navbar-nav li a {
 }
 
 html,body { 
-	height: 100%; 
+	height: 70%;
 }
 
 .global-container{
+	margin-top: 10%;
 	height:100%;
 	display: flex;
     align-items: center;
 	justify-content: center;
+	padding: 10px;
 }
 
-form{
+form {
 	padding-top: 10px;
 	font-size: 14px;
 	margin-top: 30px;
