--- a/templates/base.html
+++ b/templates/base.html
@@ -14,26 +14,59 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    {% block js %}
+
+    {% endblock %}
 </head>
 
 <body>
-    <!-- incloem la barra de navegació -->
-    {% include 'navbar.html' %}
 
-    <!-- el que posem aquí es reemplaçarà -->
-    {% block content %}
-    
-    {% endblock %}
+<nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top navbar-rounded shadow-sm"
+     style="z-index: 100;">
 
-    <footer>
-        <div class="footer-text">
-            <p class="sitemap"><b>Sitemap</b></p>
-            <li><a href="index.html">Principal</a></li>
-            <li><a href="cartellera.html">Cartellera</a></li>
-            <li><a href="login.html">Iniciar sessió</a></li>
-            <li><a href="registrar.html">Crear compte</a></li>
-        </div>
-    </footer>
+    <a class="navbar-brand left" href="/"><img src="{% static 'img/images/icon.png' %}" width="45px"></a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        {% block nav %}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/cartellera">Cartellera</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/productes">Per Picar</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Iniciar sessió</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/registrar">Crear un compte</a>
+                </li>
+            </ul>
+        {% endblock %}
+    </div>
+</nav>
+
+
+<!-- el que posem aquí es reemplaçarà -->
+{% block content %}
+
+{% endblock %}
+
+<footer>
+    <div class="footer-text">
+        <p class="sitemap"><b>Sitemap</b></p>
+        <li><a href="index.html">Principal</a></li>
+        <li><a href="cartellera.html">Cartellera</a></li>
+        <li><a href="login.html">Iniciar sessió</a></li>
+        <li><a href="registrar.html">Crear compte</a></li>
+    </div>
+</footer>
 </body>
 
 </html>
