--- a/templates/login.html
+++ b/templates/login.html
@@ -2,26 +2,30 @@
 {% load static %}
 
 {% block link_css %}
-    <link rel="stylesheet" href="{%  static  'css/login.css'  %}">
+    <link rel="stylesheet" href="{%  static 'css/login.css'  %}">
 {% endblock %}
 
 {% block content %}
+
     <div class="global-container">
         <div class="card login-form">
             <div class="card-body">
                 <h3 class="card-title text-center">Inicia sessió</h3>
                 <div class="card-text">
-                    <!--
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">Incorrect username or password.</div> -->
-                    <form>
-                        <!-- to error: add class "has-danger" -->
+                    <form method="POST" action="">
+                        {% csrf_token %}
+                        {% for message in messages %}
+                            <div class="alert alert-{{ message.tags }}" role="alert">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
                         <div class="form-group">
                             <label for="exampleInputEmail1">Correu electrònic</label>
                             <input type="email" class="form-control form-control-sm" id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputPassword1">Cantrasenya</label>
+                            <label for="exampleInputPassword1">Contrasenya</label>
                             <a href="#" style="float:right;font-size:12px;">Has oblidat la contrasenya?</a>
                             <input type="password" class="form-control form-control-sm" id="exampleInputPassword1">
                         </div>
@@ -35,4 +39,5 @@
             </div>
         </div>
     </div>
+
 {% endblock %}
