--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,11 @@
 {% load static %}
 <!-- Barra de navegació -->
+
+
 <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top navbar-rounded shadow-sm"
      style="z-index: 100;">
 
-    <a class="navbar-brand left" href="/"><img src="{% static  'img/images/icon.png' %}" width="45px"></a>
+    <a class="navbar-brand left" href="/"><img src="{% static 'img/images/icon.png' %}" width="45px"></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -16,7 +18,7 @@
                 <a class="nav-link" href="/cartellera">Cartellera</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Per Picar</a>
+                <a class="nav-link" href="/productes">Per Picar</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
