--- a/templates/base.html
+++ b/templates/base.html
@@ -21,17 +21,17 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top navbar-rounded shadow-sm"
-     style="z-index: 100;">
+{% block nav %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top navbar-rounded shadow-sm"
+         style="z-index: 100;">
 
-    <a class="navbar-brand left" href="/"><img src="{% static 'img/images/icon.png' %}" width="45px"></a>
+        <a class="navbar-brand left" href="/"><img src="{% static 'img/images/icon.png' %}" width="45px"></a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        {% block nav %}
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/cartellera">Cartellera</a>
@@ -40,6 +40,8 @@
                     <a class="nav-link" href="/productes">Per Picar</a>
                 </li>
             </ul>
+{#          Si l'usuari no ha iniciat sessió, mostrem els enllaços per crear el compte o iniciar sessió #}
+            {% if not request.user.is_authenticated %}
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Iniciar sessió</a>
@@ -48,10 +50,15 @@
                     <a class="nav-link" href="/registrar">Crear un compte</a>
                 </li>
             </ul>
-        {% endblock %}
-    </div>
-</nav>
-
+            {% endif %}
+        </div>
+{#      Si l'usuari ha iniciat sessió, mostrem el seu nom d'usuari i l'enllaç per tancar la sessió#}
+        {% if request.user.is_authenticated %}
+        <span class="nav-link">Hola, {{ request.user }}</span>
+        <span><a href="{% url 'logout' %}">Tancar Sessió</a></span>
+        {% endif %}
+    </nav>
+{% endblock %}
 
 <!-- el que posem aquí es reemplaçarà -->
 {% block content %}
