--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block link_css %}
-    <link rel="stylesheet" href="{%  static 'css/login.css'  %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -20,14 +20,12 @@
                             </div>
                         {% endfor %}
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Correu electrònic</label>
-                            <input type="email" class="form-control form-control-sm" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
+                            <label for="username">Nom d'usuari</label>
+                            <input type="text" class="form-control form-control-sm" name="username">
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputPassword1">Contrasenya</label>
-                            <a href="#" style="float:right;font-size:12px;">Has oblidat la contrasenya?</a>
-                            <input type="password" class="form-control form-control-sm" id="exampleInputPassword1">
+                            <label for="password">Contrasenya</label>
+                            <input type="password" class="form-control form-control-sm" name="password">
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Inicia sessió</button>
 
