--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-
+<br><br><br><br><br><br><br>
     <div class="global-container">
         <div class="card login-form">
             <div class="card-body">
@@ -14,41 +14,36 @@
                 <div class="card-text">
                     <form method="POST" action="">
                         {% csrf_token %}
-                        {{form.as_p}}
                         {% for message in messages %}
                             <div class="alert alert-{{ message.tags }}" role="alert">
                                 {{ message }}
                             </div>
                         {% endfor %}
-{% comment %}{#                        <div class="form-group">#}
-{#                            <label for="nom">Nom</label>#}
-{#                            <input type="text" class="form-control form-control-sm" name="nom">#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label for="nom">Cognom</label>#}
-{#                            <input type="text" class="form-control form-control-sm" name="cognom">#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label for="email">Correu electrònic</label>#}
-{#                            <input type="email" class="form-control form-control-sm" name="email">#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label for="nom">Telefon</label>#}
-{#                            <input type="tel" class="form-control form-control-sm" name="telefon">#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label for="username">Nom d'usuari</label>#}
-{#                            <input type="tel" class="form-control form-control-sm" name="username">#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label for="password">Contrasenya</label>#}
-{#                            <input type="password" class="form-control form-control-sm" name="password"#}
-{#                            onchange="form.password.pattern=this.value">#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label for="password">Repeteix la contrasenya</label>#}
-{#                            <input type="password" class="form-control form-control-sm" name="password2">#}
-{#                        </div>#}{% endcomment %}
+                        <div class="form-group">
+                            <label for="first_name">Nom</label>
+                            <input type="text" class="form-control form-control-sm" name="first_name">
+                        </div>
+                        <div class="form-group">
+                            <label for="last_name">Cognom</label>
+                            <input type="text" class="form-control form-control-sm" name="last_name">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Correu electrònic</label>
+                            <input type="email" class="form-control form-control-sm" name="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="username">Nom d'usuari</label>
+                            <input type="tel" class="form-control form-control-sm" name="username">
+                        </div>
+                        <div class="form-group">
+                            <label for="password1">Contrasenya</label>
+                            <input type="password" class="form-control form-control-sm" name="password1"
+                            onchange="form.password.pattern=this.value">
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Repeteix la contrasenya</label>
+                            <input type="password" class="form-control form-control-sm" name="password2">
+                        </div>
                         <button type="submit" class="btn btn-primary btn-block">Registrar</button>
 
                         <div class="sign-in">
@@ -60,18 +55,18 @@
         </div>
     </div>
 
-    <script>
-        var form_fields = document.getElementsByTagName('input')
-        form_fields[1].placeholder = 'Nom'
-        form_fields[2].placeholder = 'Cognom'
-        form_fields[3].placeholder = 'Email'
-        form_fields[4].placeholder = 'Telèfon'
-        form_fields[5].placeholder = "Nom d'usuari"
-        form_fields[6].placeholder = 'Contrasenya'
-        form_fields[7].placeholder = 'Confirma la contrasenya'
-
-        for (let field in form_fields) {
-            form_fields[field].className += 'form-control form-control-sm'
-        }
-    </script>
+{#    <script>#}
+{#        var form_fields = document.getElementsByTagName('input')#}
+{#        form_fields[1].placeholder = 'Nom'#}
+{#        form_fields[2].placeholder = 'Cognom'#}
+{#        form_fields[3].placeholder = 'Email'#}
+{#        form_fields[4].placeholder = 'Telèfon'#}
+{#        form_fields[5].placeholder = "Nom d'usuari"#}
+{#        form_fields[6].placeholder = 'Contrasenya'#}
+{#        form_fields[7].placeholder = 'Confirma la contrasenya'#}
+{##}
+{#        for (let field in form_fields) {#}
+{#            form_fields[field].className += 'form-control form-control-sm'#}
+{#        }#}
+{#    </script>#}
 {% endblock %}
