--- a/templates/productes.html
+++ b/templates/productes.html
@@ -19,6 +19,7 @@
                             <img src="{{ producte.imatge.url }}" class="card-img-top">
                             <div class="card-body">
                                 <h5 class="card-title">{{ producte.nom }}</h5>
+                                <h5 class="card-title">{{ producte.preu }}€</h5>
                             </div>
                         {% endif %}
                     </div>
