--- a/templates/llistat_productes_admin.html
+++ b/templates/llistat_productes_admin.html
@@ -1,40 +1,45 @@
-{% extends 'base.html' %}
+{% extends 'base_admin.html' %}
 {% load static %}
 
 {% block link_css %}
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/sidebar_admin.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+          integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 {% endblock %}
 
 {% block js %}
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="{% static 'js/confirm.js' %}"></script>
+    <script src="{% static 'js/sidebar_admin.js' %}"></script>
+
 {% endblock %}
 
 {% block content %}
-    <div class="global-container">
-        <div class="table-responsive">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Preu</th>
-                    <th>Opcions</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for producte in productes %}
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Nom</th>
+                <th>Preu</th>
+                <th>Opcions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for producte in productes %}
                 <tr>
                     <td>{{ producte.nom }}</td>
                     <td>{{ producte.preu }}</td>
                     <td>
-                        <a href="{% url 'editar_producte' producte.id_producte %}">Modificar</a>
-                        <a href="#" onclick="confirmarDeleteProducte({{ producte.id_producte }})">Eliminar</a>
+
+                        <a href="{% url 'afegir_producte' %}"><i class="material-icons">add_circle_outline</i></a>
+                        <a href="{% url 'editar_producte' producte.id_producte %}"><i class="material-icons">edit</i></a>
+                        <a href="#" onclick="confirmarDeleteProducte({{ producte.id_producte }})"><i class="material-icons">delete</i></a>
                     </td>
                 </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
-
 {% endblock %}
