Base de dades actualizada, afegits formularis de sessio i pàgina prototip de les butaques

--- a/templates/afegir_producte.html
+++ b/templates/afegir_producte.html
@@ -18,7 +18,18 @@
                 <div class="card-text">
                     <form method="POST" action="" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        <div class="form-group">
+                            <label for="nom">Nom</label>
+                            {{ form.nom }}
+                        </div>
+                        <div class="form-group">
+                            <label for="preu">Preu</label>
+                            {{ form.preu }}
+                        </div>
+                        <div class="form-group">
+                            <label for="imatge">Imatge</label>
+                            {{ form.imatge }}
+                        </div>
                         <button type="submit" class="btn btn-primary btn-block">Enviar</button>
                     </form>
                 </div>
