--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,7 @@
 <body>
 
 {% block nav %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top navbar-rounded shadow-sm"
-         style="z-index: 100;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top navbar-rounded shadow-sm" style="z-index: 100;">
 
         <a class="navbar-brand left" href="/"><img src="{% static 'img/images/icon.png' %}" width="45px"></a>
 
