--- a/templates/editar_pelicula.html
+++ b/templates/editar_pelicula.html
@@ -6,26 +6,61 @@
 {% endblock %}
 
 {% block content %}
-    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><br>
     <div class="global-container">
-        <div class="card login-form">
-            <div class="card-body">
-                <h3 class="card-title text-center">Modifica una pel·lícula</h3>
-                {% for message in messages %}
-                    <div class="alert alert-{{ message.tags }}" role="alert">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-                <div class="card-text">
-                    <form method="POST" action="" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-primary btn-block">Modificar</button>
-                    </form>
+
+        <form method="POST" action="" enctype="multipart/form-data">
+            <h3 class="card-title text-center">Modifica una pel·lícula</h3>
+            {% csrf_token %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+
+            <div class="form-group">
+                <label for="titol">Títol</label>
+                {{ form.titol }}
+            </div>
+            <div class="form-group">
+                <label for="sinopsis">Sinopsis</label>
+                {{ form.sinopsis }}
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="generes">Gènere</label>
+                    {{ form.generes }}
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="director">Director</label>
+                    {{ form.director }}
                 </div>
             </div>
-        </div>
-    </div>
-    <br><br><br><br><br><br>
+            <div class="form-group">
+                    <label for="actors">Actors</label>
+                    {{ form.actors }}
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="duracio">Duració</label>
+                    {{ form.duracio }}
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="puntuacio">Puntuació</label>
+                    {{ form.puntuacio }}
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="qualificacio">Qualificació</label>
+                    {{ form.qualificacio }}
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="imatge">Puja una imatge</label>
+                {{form.imatge}}
+            </div>
 
+            <button type="submit" class="btn btn-primary btn-block">Modificar</button>
+        </form>
+    </div>
+<br><br><br><br><br><br>
 {% endblock %}
