--- a/templates/editar_producte.html
+++ b/templates/editar_producte.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <br><br><br><br>
+
     <div class="global-container">
         <div class="card login-form">
             <div class="card-body">
@@ -19,7 +19,18 @@
                 <div class="card-text">
                     <form method="POST" action="" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        <div class="form-group">
+                            <label for="nom">Nom</label>
+                            {{ form.nom }}
+                        </div>
+                        <div class="form-group">
+                            <label for="preu">Preu</label>
+                            {{ form.preu }}
+                        </div>
+                        <div class="form-group">
+                            <label for="imatge">Imatge</label>
+                            {{ form.imatge }}
+                        </div>
                         <button type="submit" class="btn btn-primary btn-block">Modificar</button>
                     </form>
                 </div>
