--- a/templates/editar_pelicula.html
+++ b/templates/editar_pelicula.html
@@ -29,7 +29,7 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="generes">Gènere</label>
-                    {{ form.generes }}
+                    {{ form.id_genere }}
                 </div>
                 <div class="form-group col-md-6">
                     <label for="director">Director</label>
