--- a/templates/llistat_pelis_admin.html
+++ b/templates/llistat_pelis_admin.html
@@ -31,7 +31,7 @@
             {% for peli in pelicules %}
                 <tr>
                     <td>{{ peli.titol }}</td>
-                    <td>{{ peli.generes }}</td>
+                    <td>{{ peli.id_genere.nom }}</td>
                     <td>{{ peli.director }}</td>
                     <td>{{ peli.qualificacio }}</td>
                     <td>
