--- a/templates/seleccio_butaques.html
+++ b/templates/seleccio_butaques.html
@@ -1,10 +1,116 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'css/butaques.css' %}" />
+    <script src="{% static 'js/butaques.js' %}" defer></script>
+    <title>Booking cinema seats</title>
+</head>
+
+<body>
+    <div class="movie-container">
+        <h2>
+            {{ sessio.id_pelicula }}
+        </h2>
+    </div>
+
+    <ul class="showcase">
+        <li>
+            <div class="seat"></div>
+            <p class="info-butaca">Lliures</p>
+        </li>
+        <li>
+            <div class="seat selected"></div>
+            <p class="info-butaca">Seleccionats</p>
+        </li>
+        <li>
+            <div class="seat occupied"></div>
+            <p class="info-butaca">Ocupats</p>
+        </li>
+    </ul>
+
+    <div class="container">
+        <div class="screen"></div>
+        <div class="row">
+{#            <input type="checkbox" name="butaca" id="1" value="id" hidden>#}
+{#            <label for="1" class="seat"></label>#}
+{#            <input type="checkbox" name="butaca" id="2" value="id" hidden disabled="disabled">#}
+{#            <label for="2" class="seat"></label>#}
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+        </div>
+    </div>
+
+    <p class="text">
+        Has seleccionat <span id="count">0</span> seients per <span id="total">0</span>€
+    </p>
+    <br>
+    <a href="cartellera.html" class="btn btn-primary" role="button">Enrere</a>
 </body>
+
 </html>
