--- a/templates/afegir_pelicula.html
+++ b/templates/afegir_pelicula.html
@@ -6,7 +6,6 @@
 {% endblock %}
 
 {% block content %}
-    <br><br><br><br><br>
     <div class="global-container">
 
         <form method="POST" action="" enctype="multipart/form-data">
@@ -29,7 +28,7 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="generes">Gènere</label>
-                    {{ form.generes }}
+                    {{ form.id_genere }}
                 </div>
                 <div class="form-group col-md-6">
                     <label for="director">Director</label>
