--- a/templates/info_pelicula.html
+++ b/templates/info_pelicula.html
@@ -9,7 +9,7 @@
 
     <h2 class="center">{{ pelicula.titol }}</h2>
 
-{#    fem un for per mostrar les pel·lícules que hi ha a la base de dades#}
+    {#    fem un for per mostrar les pel·lícules que hi ha a la base de dades#}
     <div class="container peli-container">
         <div class="row">
             <div class="col-md-3">
@@ -22,8 +22,10 @@
 
                     <div class="horari">
                         <h5>Horaris</h5>
-                        <a href="../butaques.html" class="btn btn-danger" role="button">{{ sessio.hora }}</a>
-                        <a href="../butaques.html" class="btn btn-danger" role="button">{{ sessio.hora }}</a>
+                        {% for sess in sessio %}
+                            <a href="{% url 'seleccio_butaques' sess.id_sessio %}" class="btn btn-danger"
+                               role="button">{{ sess.hora }}</a>
+                        {% endfor %}
                     </div>
 
                     <p><b>Duració: </b>{{ pelicula.duracio }}</p>
