Afegida funcionalitat perquè els usuaris puguin comentar a les pel·lícules. Canvi a la base de dades tant per fer això com per les reserves de butaques

--- a/templates/afegir_pelicula.html
+++ b/templates/afegir_pelicula.html
@@ -26,13 +26,17 @@
                 {{ form.sinopsis }}
             </div>
             <div class="form-row">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                     <label for="generes">Gènere</label>
                     {{ form.id_genere }}
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                     <label for="director">Director</label>
                     {{ form.director }}
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="director">Preu</label>
+                    {{ form.preu }}
                 </div>
             </div>
             <div class="form-group">
