--- a/Apps/gestio_cine/static/css/butaques.css
+++ b/Apps/gestio_cine/static/css/butaques.css
@@ -52,12 +52,12 @@ body {
   background-color: #fff;
 }
 
-/*input[type=checkbox]:checked + label.seat {*/
-/*  background-color: #6feaf6;*/
-/*}*/
-/*input[type=checkbox][disabled=disabled] + label.seat {*/
-/*  background-color: #fff;*/
-/*}*/
+input[type=checkbox]:checked + label.seat {
+  background-color: #6feaf6;
+}
+input:disabled + label.seat {
+  background-color: #fff;
+}
 
 .seat:nth-of-type(2) {
   margin-right: 18px;
