--- a/templates/cartellera.html
+++ b/templates/cartellera.html
@@ -9,28 +9,28 @@
 
     <h2 class="center">Cartellera</h2> <br>
 
-{#    fem un for per mostrar les pel·lícules que hi ha a la base de dades#}
+    {#    fem un for per mostrar les pel·lícules que hi ha a la base de dades#}
     <div class="container">
-    <select id="selectGeneres">
-                {% for genere in generes %}
+        <select id="selectGeneres" class="form-control form-control-sm">
+            {% for genere in generes %}
                 <option value="{{ genere.id_genere }}">
                     {{ genere.nom }}
                 </option>
-                {% endfor %}
-            </select>
+            {% endfor %}
+        </select><br>
         <div class="row">
             {% for peli in pelicules %}
                 <div class="col-md-3 col-sm-6 mb-3">
-                <a href="{% url 'info_pelicula' peli.id_pelicula %}" class="custom-card">
-                    <div class="card">
-                        {% if peli.imatge %}
-                            <img src="{{ peli.imatge.url }}" class="card-img-top">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ peli.titol }}</h5>
-                            </div>
-                        {% endif %}
-                    </div>
-                </a>
+                    <a href="{% url 'info_pelicula' peli.id_pelicula %}" class="custom-card">
+                        <div class="card">
+                            {% if peli.imatge %}
+                                <img src="{{ peli.imatge.url }}" class="card-img-top">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ peli.titol }}</h5>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </a>
                 </div>
             {% endfor %}
         </div>
