Afgit formulari de pagament i gestio comentaris. També que es vegin en fila les butaques

--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -28,7 +28,9 @@
         <a href="/llistat_productes"><i class="material-icons">fastfood</i><span
                 class="icon-text">Gestionar productes</span></a><br>
         <a href="/llistat_sessions"><i class="material-icons">movie</i><span
-                class="icon-text">Gestionar sessions</span></a>
+                class="icon-text">Gestionar sessions</span></a><br>
+        <a href="/llistat_comentaris"><i class="material-icons">message</i><span
+                class="icon-text">Gestionar comentaris</span></a>
     </div>
 
     <div id="main">
